# Spectral-AI-rt-cores-for-moe

./: .gitignore  .gitmodules  ALPHA_BSH_SUMMARY.md  ALPHA_BSH_TECHNICAL_NOTES.md  BUILD.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INDEX.md  INVESTIGATION_RESULTS.md  LEARNINGS.md  LICENSE  MEJORAS.md  OPTIX_HOST_IMPLEMENTATION.md  README.md  README_KERNELS.md  ROADMAP.md  STATUS.md  build_ptx_win.bat  expert_catalog.json  expert_catalog_exhaustive.json  expert_deep_analysis.json  train_all_branch_specific.bat  train_all_gemma4.bat
checkpoints/micro_predictors/: micro_predictors.pt
cmake/: cuda_msvc_fix.props
cuda/: README.md  alpha_phase_a.cu  alpha_phase_b.cu  async_pipeline.cu  closest_hit.cu  inception_kernels.cu  inception_resonance.cu  liquidbit_kernels.cu  optix_host.cpp  optix_router_hitgroup.cu  optix_router_host.cpp  optix_router_raygen.cu  ray_attention.cu  ray_generation.cu  spectral_kernels.cu  spectral_resonance.cu  ternary_resonance.cu
cuda/v5/: build_bvh_ext_win.py  build_ext.py  build_optix_ext.py  build_optix_win.bat  build_ternary_ext.py  build_ternary_ext_win.py  bvh_router_kernel.cu  bvh_torch_ext.cu  check_env.sh  debug_ctypes.sh  optix_training_ext.cu  run_benchmark.sh  run_benchmark_final.sh  run_benchmark_quantization.sh  run_build_ext.sh  run_test.sh  run_train_multidomain.sh  setup_and_run_fase5.sh  setup_wsl_env.sh  ternary_torch_ext.cu
cuda/v5/calibration_weights/: calibration_weights.h
docs/: ARCHITECTURE.md  BENCHMARK_TEORICO.md  CUDA_BVH_ROUTER.md  HANDOFF_SESSION_2026_03_29.md  MEMORY_BREAKTHROUGH.md  PATENT_BENCHMARK_CERTIFIED.md  session_2026_04_13_coopvec_gemma4.md
docs/internal/: ALPHA_BSH_SUMMARY.md  ALPHA_BSH_TECHNICAL_NOTES.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_RESULTS.md  OPTIX_HOST_IMPLEMENTATION.md
include/: alpha_bsh.h  inception_engine.h  optical_attention.h  rt_router_params.h  semantic_bvh.h  spectral_ray.h  spectral_resonance.h  token_geometry.h
paper/: spectral_ai_zero_matrix.md
patents/: patent_01_rt_attention.md  patent_02_inception_engine.md  patent_03_spectral_routing.md
patents/figures/: FIGURE_SPECS.md
prototypes/: integration_test.py  integration_test_v2.py
prototypes/bsh_spectral/: INDEX.md  README.md  TRAINING_README.md  final_demo.sh  proto_a.py  test_trained_weights.py  train_dispersion.py  train_dispersion_v2.py
prototypes/voronoi_crystal/: proto_b.py
python/: README_TRAINING.md  analyze_experts.py  async_pipeline_bridge.py  benchmark.py  benchmark_cuda_e2e.py  benchmark_e2e.py  benchmark_e2e_final.py  benchmark_expert_types.py  benchmark_optix_latency.py  benchmark_routing_backends.py  benchmark_scaling.py  bvh_router.py  bvh_router_bridge.py  calibrate_router.py  diagnose_wrapper_gap.py  download_embeddings.py  download_embeddings_v2.py  dupl_score_optimizer.py  embedding_bridge.py  expert_lru_cache.py  export_calibration.py  extract_real_hiddens.py  finetune_ternary_experts.py  fuzzy_bsh.py  fuzzy_bsh_autograd.py  gemma4_extract.py  generate_figures.py  gpt2_baseline.py  inception_attention.py  inference.py  micro_expert.py  multi_domain_dataset.py  ohbsc.py  olmoe_bvh_distill.py  olmoe_e2e_eval.py  olmoe_extract.py  optix_attention.py  optix_router_bridge.py  optix_router_integration.py  optix_training_bridge.py  (+24 more)
results/: eval_hellaswag_16layer_results.json  eval_hellaswag_2k_16layer.json  eval_hellaswag_2k_3layer.json  eval_hellaswag_2k_baseline.json  eval_hellaswag_3layer_results.json  eval_hellaswag_results.json  eval_polysemy_results.json  sweep_prefilter_full.json  sweep_prefilter_perlayer_results.json  sweep_prefilter_results.json
scripts/: generate_paper_tables.py  patent_benchmark.py  patent_benchmarks.sh  recompile_ptx_blackwell.sh  regenerate_all.sh  train_remaining_layers.sh  validate_checkpoints.py  verify_all.sh  wsl_build_extensions.py
spectral_ai/: __init__.py
src/: alpha_bsh.cpp  semantic_bvh.cpp  token_geometry.cpp
tests/: batch_runner.cpp  benchmark.cu  benchmark_full.cu  inception_engine_test.cpp  inception_runner.cpp  print_struct_sizes.cpp  test_bvh_gate_wrapper.py  test_bvh_router.py  test_enhanced_bvh_router.py  test_inception_pipeline.cpp  test_optix_host_structure.cpp  test_optix_integration.py  test_optix_pipeline.cpp  test_patent_claims.py  test_spectral_techniques.py
zenodo/: patent_summary.md  preprint_spectral_ai.md  spectral_routing.md  technical_report.md
zenodo/paper_expert_specialization/: expert_specialization.md
